cross origin  dynamic implementation